<resources><string name="header">Запись на приём</string><string name="save">Записаться</string><string name="app_name">Test1</string><string name="summary_price">Стоимость</string><string name="summary_name_test">Пафос Паллас</string><string name="summary_description_test">Замечательный отель на берегу Моря. Всё включено.</string><string name="summary_price_value_test">12500 руб</string><string-array name="appointment_decriptions"><item>Утро вечера мудренее</item><item>Сделал дело - гуляй смело</item><item>Дорога к обеду ложка</item><item>Вечерний прием</item><item>Время приема ограничено</item></string-array><string name="default_description">Свободный прием</string><string name="description_occupied">Время приема занято</string><string name="menu">Меню</string><string name="schedule">Расписание</string><string name="info">Инфо</string><string name="map">Карта</string><string name="feedback">Отзывы</string></resources>